--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,22 @@
 absl-py==1.1.0
 attrs==21.4.0
+black==22.6.0
+click==8.1.3
 cycler==0.11.0
 fonttools==4.33.3
 kiwisolver==1.4.3
 matplotlib==3.5.2
 mediapipe==0.8.10.1
+mypy-extensions==0.4.3
 numpy==1.23.0
 opencv-contrib-python==4.5.5.64
 opencv-python==4.5.5.64
 packaging==21.3
+pathspec==0.9.0
 Pillow==9.2.0
+platformdirs==2.5.2
 protobuf==3.20.1
 pyparsing==3.0.9
 python-dateutil==2.8.2
 six==1.16.0
+tomli==2.0.1
