--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,27 @@
-absl-py==1.1.0
-attrs==21.4.0
-black==22.6.0
-click==8.1.3
+absl-py==1.3.0
+attrs==22.1.0
+contourpy==1.0.6
 cycler==0.11.0
-fonttools==4.33.3
-kiwisolver==1.4.3
-matplotlib==3.5.2
-mediapipe==0.8.10.1
-mypy-extensions==0.4.3
-numpy==1.23.0
-opencv-contrib-python==4.5.5.64
-opencv-python==4.5.5.64
+djitellopy==2.4.0
+flatbuffers==22.11.23
+fonttools==4.38.0
+joblib==1.2.0
+kiwisolver==1.4.4
+matplotlib==3.6.2
+mediapipe==0.9.0
+numpy==1.23.5
+opencv-contrib-python==4.6.0.66
+opencv-python==4.6.0.66
 packaging==21.3
-pathspec==0.9.0
-Pillow==9.2.0
-platformdirs==2.5.2
-protobuf==3.20.1
+Pillow==9.3.0
+protobuf==3.20.3
 pyparsing==3.0.9
+PySide6==6.3.1
+PySide6-Addons==6.3.1
+PySide6-Essentials==6.3.1
 python-dateutil==2.8.2
+scikit-learn==1.1.1
+scipy==1.9.3
+shiboken6==6.3.1
 six==1.16.0
-tomli==2.0.1
-scikit-learn~=1.1.1
-PySide6~=6.3.1
-pandas~=1.4.3
-tensorflow~=2.9.1
+threadpoolctl==3.1.0
